--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Database configuration (Sangat sensitif!)
-config/database.php
-config/db_les_musik (1).sql
+config/
 
 # OS and IDE junk
 .DS_Store
